--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="/FrontEnd/assets/style.css">
 
 
 </head>
@@ -20,14 +20,14 @@
 			<li>Projects</li>
 			<li>Contact</li>
       <li><a href="login.html">Login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><img src="/FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
 	<section id="introduction">
 		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
+			<img src="/FrontEnd/assets/images/sophie-bluel.png" alt="">
 		</figure>
 		<article>
 			<h2>Space Designer</h2>
