Update file reference for CSS

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/loginstyle.css">
+	<link rel="stylesheet" href="/FrontEnd/assets/loginstyle.css">
 </head>
 <body>
 <header>
@@ -18,7 +18,7 @@
 			<li>Projects</li>
 			<li>Contact</li>
 			<li><a href="login.html" class ="active">Login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
