Update edit code

--- a/edit.html
+++ b/edit.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/loggedin.css">
+	<link rel="stylesheet" href="/FrontEnd/assets/loggedin.css">
     <script src="https://kit.fontawesome.com/5fe8401f1d.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -23,7 +23,7 @@
                 <li>Projects</li>
                 <li>Contact</li>
                 <li><a href="login.html">Logout</a></li>
-                <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+                <li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
     <main>
         <section id="introduction">
             <figure>
-                <img src="./assets/images/sophie-bluel.png" alt="">
+                <img src="FrontEnd/assets/images/sophie-bluel.png" alt="">
             </figure>
             <article>
                 <h2>Space Designer</h2>
